@@ -1,5 +1,11 @@
 2008-10-14 Omair Majid <omajid@redhat.com>
 
+	* Makefile.am (stamps/pulse-java.stamp): Added
+	-I$(ICEDTEA_BOOT_DIR)/include/linux.
+
+
+2008-10-14 Omair Majid <omajid@redhat.com>
+
 	* .hgignore: Added generated files to ignore list.
 
 	* pulseaudio/src/java/org/classpath/icedtea/pulseaudio/EventLoop.java
